removed dependencies from javax.xml.bind